[package]
name = "ccthw_ash_allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "*", features = ["linked"] }
thiserror = "*"
log = "*"

[dev-dependencies]
anyhow = "*"
flexi_logger = "*"
assert2 = "*"
regex = "*"
ccthw_ash_instance = { git = "https://github.com/Creative-Coding-The-Hard-Way/ash_instance.git" }
indoc = "*"
scopeguard = "*"

[dev-dependencies.textwrap]
features = ["terminal_size"]
version = "*"
